--- a/CSS/main.css
+++ b/CSS/main.css
@@ -304,3 +304,29 @@ footer .social-links{
     75%{ transform: translateY(-10px);}
     100%{ transform: translateY(0);}
 }
+.typing {
+    white-space: nowrap;
+    overflow: hidden;
+    width: 55ch;
+    border-right: 3px solid var(--main-text);
+    animation: typer 3.5s steps(68) infinite, blink-caret 0.75s step-end infinite;
+    display: inline-block;
+}
+.typing::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: -5px;
+    width: 2px;
+    height: 100%;
+    background-color: var(--accent);
+    animation: blink 0.7s step-end infinite;
+}
+@keyframes typer {
+    from { width: 0; }
+    to { width: 55ch; } /* عدد الحروف */
+}
+@keyframes blink-caret {
+    from, to { border-color: transparent }
+    50% { border-color: var(--primary) }
+}
