--- a/CSS/skills.css
+++ b/CSS/skills.css
@@ -19,7 +19,7 @@
     padding: 20px;
     background-color: var(--card-bg);
     border-radius: 8px;
-    height: 300px;
+    height: 230px;
     box-shadow: var(--shadow-color) 0px 0px 16px 0px;
     cursor: pointer;
 }
@@ -36,7 +36,6 @@
     margin-bottom: 20px;
     border-radius: 10px;
     margin-top: 15px;
-    margin-bottom: 30px;
 }
 .card .icon img , .card .icon i{
     height: 100%;
@@ -49,7 +48,7 @@
 .skill-title{
     font-size: 1.2rem;
     font-weight: 700;
-    margin: 5px 0;
+    margin-bottom: 10px;
 }
 .card {
     perspective: 1000px;
@@ -71,9 +70,14 @@
     backface-visibility: hidden;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     padding: 20px;
 }
 .card-back {
     transform: rotateY(180deg);
+}
+.skill-bar{
+    height: 5px;
+    border-radius: 20px;
+    background-color: var(--accent);
+    margin-bottom: 10px;
 }
