--- a/CSS/main.css
+++ b/CSS/main.css
@@ -255,6 +255,29 @@ footer{
     align-items: center;
     height: 115px;
 }
+footer > p a::after{
+    content: '';
+    position: absolute;
+    bottom: -5px;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    border-radius: 50%;
+    transform: scale(0);
+    transition: all 0.4s ease;
+    background-color: var(--accent);
+}
+footer > p a:hover::after{
+    transform: scale(1);
+}
+footer > p a:hover{
+    transform: translateY(-5px);
+}
+footer > p a{
+    display: inline-block;
+    color: var(--accent);
+    position: relative;
+}
 footer .social-links{
     display: flex;
     gap: 30px;
